# erfi_pytorch

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  cuda-triton.yml
benchmarks/: benchmark_erfi.py
docs/: faddeeva.md
src/erfi_pytorch/: __init__.py  _coefficients.py  _coefficients_float64.py  _dispatch.py  _torch_impl.py  _triton.py
tests/: test_erfi.py
tools/: extract_w_im_coefficients.py  generate_w_im_float64_coefficients.py
