[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erfi-pytorch"
version = "0.1.0"
description = "GPU-accelerated imaginary error function for real PyTorch tensors"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "erfi-pytorch contributors"}]
dependencies = ["torch>=2.7"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["mpmath>=1.3", "pytest>=8", "scipy>=1.11"]
benchmark = ["scipy>=1.11"]
triton = ["triton>=3.3; platform_system == 'Linux'"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
erfi_pytorch = ["licenses/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
