[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "erfi-pytorch"
version = "0.1.0"
description = "GPU-accelerated imaginary error function for real PyTorch tensors"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "third_party/faddeeva/LICENSE"]
authors = [{name = "erfi-pytorch contributors"}]
keywords = ["pytorch", "cuda", "triton", "special-functions", "erfi"]
dependencies = ["torch>=2.7"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["mpmath>=1.3", "pytest>=8", "scipy>=1.11"]
benchmark = ["scipy>=1.11"]
triton = ["triton>=3.3; platform_system == 'Linux'"]

[project.urls]
Homepage = "https://github.com/ZhichaoZhu/erfi_pytorch"
Repository = "https://github.com/ZhichaoZhu/erfi_pytorch.git"
Issues = "https://github.com/ZhichaoZhu/erfi_pytorch/issues"
Documentation = "https://github.com/ZhichaoZhu/erfi_pytorch/blob/main/docs/faddeeva.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
erfi_pytorch = ["licenses/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
